# src/main/resources/openapi.yaml
@@ -19,6 +19,10 @@ paths:
         required: true
       responses:
         "202":
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/InitiatePaymentProcessResponse'
           description: Request accepted
         "400":
           content:
@@ -122,6 +126,19 @@ components:
       - checkout_id
       - credit_card_info
       - payment_orders
+      type: object
+    InitiatePaymentProcessResponse:
+      example:
+        status: status
+        since: since
+      properties:
+        status:
+          type: string
+        since:
+          type: string
+      required:
+      - since
+      - status
       type: object
     Error:
       properties:
